[package]
name = "wasc"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2"
hex = "0.4"
rand = "0.7"
rog = "0.1"

env_logger = "0.4.3"
log = "0.4.0"
wasmparser = "0.51.2"
# lazy_static = "1.4.0"
