[package]
name = "wasc"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2"
hex = "0.4"
rand = "0.7"
rog = "0.1"
wasmparser = "0.51.2"

[dev-dependencies]
serde_json = "1.0"
ckb-vm = "0.19.1"
bytes = "*"
